--- a/app/views/traffics/index.html.erb
+++ b/app/views/traffics/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Traffics#index</h1>
-<p>Find me in app/views/traffics/index.html.erb</p>
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+    
+<script>
+	handler = Gmaps.build('Google');
+	handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+	  markers = handler.addMarkers([
+	    {
+	      
+	        "lat": 51.510357,
+	        "lng": -0.116773,
+
+	      "picture": {
+	        "url": "http://res.cloudinary.com/dhgsrpwf7/image/upload/v1480440802/pin_yheqjg.png",
+	        "width":  25,
+	        "height": 38
+	      },
+	      "infowindow": "hello!"
+	      
+	    }
+	  ]);
+	  handler.bounds.extendWith(markers);
+	  handler.fitMapToBounds();
+	});
+</script>
